--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,2 +1,14 @@
-body {
-  background-color: pink; }
+.container {
+  width: 94.11%;
+  margin: 0 auto; }
+
+/*-------Header--------*/
+.header-title {
+  width: 171px;
+  height: 25px;
+  font-size: 32px;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #076e9f; }
+  .header-title .header-title_cyan {
+    color: #22aaec; }
