second commit Header

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,14 +1,83 @@
+body {
+  margin: 0; }
+
 .container {
+  position: relative;
   width: 94.11%;
   margin: 0 auto; }
 
 /*-------Header--------*/
 .header-title {
-  width: 171px;
-  height: 25px;
+  width: 100%;
+  text-align: center;
   font-size: 32px;
   font-weight: 400;
   text-transform: uppercase;
-  color: #076e9f; }
+  color: #076e9f;
+  line-height: 1;
+  font-family: "League Gothic";
+  margin: 16px auto 17px; }
   .header-title .header-title_cyan {
     color: #22aaec; }
+
+.header-social {
+  position: absolute;
+  top: 2px;
+  right: 0;
+  width: 14.37%;
+  height: 16px; }
+  .header-social .header-social_link {
+    display: inline-block;
+    text-decoration: none;
+    vertical-align: middle;
+    margin-left: 5.07%;
+    float: left; }
+    .header-social .header-social_link .header-social_icon {
+      height: 16px; }
+
+.header-nav {
+  width: 100%;
+  text-align: center;
+  padding-left: 0;
+  margin: 0 0 11px 0; }
+  .header-nav .header-nav_item {
+    display: inline-block;
+    margin-right: 18px;
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 18px;
+    text-transform: uppercase; }
+    .header-nav .header-nav_item:last-child {
+      margin-right: 0; }
+    .header-nav .header-nav_item:hover {
+      background-color: #076e9f;
+      background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.01)), to(rgba(255, 255, 255, 0.01)));
+      background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.01) 0%, rgba(255, 255, 255, 0.01) 100%);
+      background-image: -o-linear-gradient(bottom, rgba(0, 0, 0, 0.01) 0%, rgba(255, 255, 255, 0.01) 100%);
+      background-image: linear-gradient(to top, rgba(0, 0, 0, 0.01) 0%, rgba(255, 255, 255, 0.01) 100%);
+      -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
+              box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
+      text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.55); }
+    .header-nav .header-nav_item .header-nav_link {
+      display: block;
+      padding: 5px 16px;
+      text-decoration: none;
+      border: 1px solid rgba(255, 255, 255, 0);
+      color: #707070; }
+      .header-nav .header-nav_item .header-nav_link:hover {
+        text-decoration: none;
+        color: white;
+        border: 1px solid #045279; }
+
+/*------End-Header--------*/
+/*-------Main--------*/
+.main {
+  height: 433px;
+  background-image: url("../img/main_bg.png");
+  background-repeat: no-repeat;
+  -webkit-background-size: 100% 100%;
+          background-size: 100% 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-top: 2px solid #22aaec;
+  border-bottom: 2px solid #22aaec; }
