--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,5 +1,6 @@
 body, h2, h3, p {
-  margin: 0; }
+  margin: 0;
+  pointer-events: auto; }
 
 .container {
   position: relative;
@@ -143,6 +144,7 @@ body, h2, h3, p {
     left: -23.5%;
     width: 46.10%;
     height: 70px;
+    max-width: 72px;
     z-index: 2; }
   .main-person_item .main-person_quote {
     width: 48.05%;
@@ -336,54 +338,96 @@ body, h2, h3, p {
     position: relative;
     width: 48.27%;
     height: 214px;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     float: left;
     background-color: #eaeaea;
     -webkit-border-radius: 20px 0 0 0;
             border-radius: 20px 0 0 0;
-    padding-left: 8.26%;
-    margin: 20px 0 0 1.72%; }
-    .content-news .content-news_item .content-news_item:before,
-    .content-news .content-news_item .content-news_item:after {
-      z-index: -1;
-      position: absolute;
-      content: "";
-      bottom: 15px;
-      left: 10px;
-      width: 50%;
-      top: 80%;
-      max-width: 300px;
-      background: #777;
-      background: rgba(0, 0, 0, 0.7);
-      -webkit-box-shadow: 0 15px 10px rgba(0, 0, 0, 0.7);
-      box-shadow: 0 15px 10px rgba(0, 0, 0, 0.7);
-      -webkit-transform: rotate(-3deg);
-      -ms-transform: rotate(-3deg);
-      transform: rotate(-3deg); }
-    .content-news .content-news_item .content-news_item:after {
-      -webkit-transform: rotate(3deg);
-      -ms-transform: rotate(3deg);
-      transform: rotate(3deg);
-      right: 10px;
-      left: auto; }
-    .content-news .content-news_item .content-header {
-      margin: 25px 0 7px 0;
-      padding-top: 0; }
-    .content-news .content-news_item .content-news_author {
-      height: 10px;
-      font-size: 10px;
-      font-weight: 400;
-      color: #878787;
-      margin-bottom: 33px; }
-    .content-news .content-news_item .content-news_link {
-      color: #076e9f;
+    margin: 20px 1.74% 0 1.72%; }
+    .content-news .content-news_item .content-news_item-wrap {
+      padding-left: 8.26%;
+      margin-bottom: 22px; }
+      .content-news .content-news_item .content-news_item-wrap .content-header {
+        margin: 25px 0 6px 0;
+        padding-top: 0;
+        width: 64.67%;
+        line-height: 21px; }
+      .content-news .content-news_item .content-news_item-wrap .content-news_author {
+        height: 10px;
+        font-size: 10px;
+        font-weight: 400;
+        color: #878787;
+        margin-bottom: 31px; }
+      .content-news .content-news_item .content-news_item-wrap .content-news_author-last {
+        margin-bottom: 10px; }
+      .content-news .content-news_item .content-news_item-wrap .content-news_link {
+        color: #076e9f;
+        text-decoration: none;
+        font-size: 10px;
+        font-weight: 400; }
+      .content-news .content-news_item .content-news_item-wrap .content-news_text {
+        width: 70.52%;
+        height: 46px;
+        color: #5c5c5c;
+        font-size: 10px;
+        font-weight: 400;
+        line-height: 18px;
+        margin-bottom: 5px; }
+      .content-news .content-news_item .content-news_item-wrap .content-news_text-last {
+        width: 84.67%;
+        height: 65px;
+        color: #5c5c5c;
+        font-size: 10px;
+        font-weight: 400;
+        line-height: 18px; }
+    .content-news .content-news_item .content-news_stats {
+      width: 100%;
+      height: 30px;
+      background-color: #f4f3f3;
+      padding-left: 75.75%;
+      -webkit-box-sizing: border-box;
+              box-sizing: border-box; }
+      .content-news .content-news_item .content-news_stats .content-news_stats-info {
+        color: #076e9f;
+        font-size: 10px;
+        font-weight: 400;
+        float: left;
+        margin-right: 17%;
+        margin-top: 11px; }
+        .content-news .content-news_item .content-news_stats .content-news_stats-info:last-child {
+          margin-right: 0; }
+      .content-news .content-news_item .content-news_stats .content-news_stats-img {
+        float: left;
+        margin-top: 7px;
+        margin-right: 3%; }
+        .content-news .content-news_item .content-news_stats .content-news_stats-img:last-child {
+          margin-top: 8px; }
+  .content-news .content-news_item-last {
+    margin-left: 0;
+    margin-right: 0; }
+    .content-news .content-news_item-last .content-news_item-wrap_last {
+      margin-bottom: 3px; }
+  .content-news .content-news_add {
+    width: 98.4%;
+    height: 80px;
+    float: left;
+    margin: 28px 0 0 1.72%;
+    background-color: #f4f3f3;
+    background-image: -webkit-gradient(linear, left bottom, left top, from(transparent), to(transparent));
+    background-image: -webkit-linear-gradient(bottom, transparent 0%, transparent 100%);
+    background-image: -o-linear-gradient(bottom, transparent 0%, transparent 100%);
+    background-image: linear-gradient(to top, transparent 0%, transparent 100%); }
+    .content-news .content-news_add .content-news_add-text {
+      width: 9.18%;
+      display: block;
       text-decoration: none;
-      font-size: 10px;
+      margin: 35px auto 0;
+      text-shadow: 0 1px 0 rgba(255, 255, 255, 0.75);
+      color: #636363;
+      font-size: 12px;
       font-weight: 400; }
-    .content-news .content-news_item .content-news_text {
-      width: 68.52%;
-      height: 46px;
-      color: #5c5c5c;
-      font-size: 10px;
-      font-weight: 400;
-      line-height: 18px;
-      margin-bottom: 10px; }
+
+.content-currency {
+  float: left;
+  margin-left: 0.52%; }
