--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -5,6 +5,8 @@ $anthrFont : 'League Gothic Condensed'
 
 body, h2,h3, p 
 	margin: 0
+	pointer-events: auto 
+
 
 
 .container
@@ -150,6 +152,7 @@ body, h2,h3, p
 		left: -23.5%
 		width: 46.10%
 		height: 70px
+		max-width: 72px
 		z-index: 2
 	.main-person_quote		
 		width: 48.05%
@@ -342,61 +345,91 @@ body, h2,h3, p
 		position: relative
 		width: 48.27%
 		height: 214px
+		box-sizing: border-box
 		float: left
 		background-color: #eaeaea
-		border-radius: 20px 0 0 0
-		padding-left: 8.26%
-		margin: 20px 0 0 1.72%
-		.content-news_item:before,
-		.content-news_item:after 
-			 z-index: -1
-			 position: absolute
-			 content: ""
-			 bottom: 15px
-			 left: 10px
-			 width: 50%
-			 top: 80%
-			 max-width: 300px
-			 background: #777
-			 background: rgba(0, 0, 0, 0.7)
-			 -webkit-box-shadow: 0 15px 10px rgba(0,0,0, 0.7)
-			 -moz-box-shadow: 0 15px 10px rgba(0, 0, 0, 0.7)
-			 box-shadow: 0 15px 10px rgba(0, 0, 0, 0.7)
-			 -webkit-transform: rotate(-3deg)
-			 -moz-transform: rotate(-3deg)
-			 -o-transform: rotate(-3deg)
-			 -ms-transform: rotate(-3deg)
-			 transform: rotate(-3deg)
-		.content-news_item:after 
-			 -webkit-transform: rotate(3deg)
-			 -moz-transform: rotate(3deg)
-			 -o-transform: rotate(3deg)
-			 -ms-transform: rotate(3deg)
-			 transform: rotate(3deg)
-			 right: 10px
-			 left: auto		
-		.content-header
-			margin: 25px 0 7px 0
-			padding-top: 0
-		.content-news_author
-			height: 10px
-			font-size: 10px
-			font-weight: 400
-			color: #878787
-			margin-bottom: 33px	
-		.content-news_link
-			color: #076e9f
+		border-radius: 20px 0 0 0		
+		margin: 20px 1.74% 0 1.72%			
+		.content-news_item-wrap
+			padding-left: 8.26%	
+			margin-bottom: 22px			
+			.content-header
+				margin: 25px 0 6px 0
+				padding-top: 0
+				width: 64.67%
+				line-height: 21px
+			.content-news_author
+				height: 10px
+				font-size: 10px
+				font-weight: 400
+				color: #878787
+				margin-bottom: 31px	
+			.content-news_author-last
+				margin-bottom: 10px		
+			.content-news_link
+				color: #076e9f
+				text-decoration: none
+				font-size: 10px
+				font-weight: 400				
+			.content-news_text
+				width: 70.52%
+				height: 46px
+				color: #5c5c5c
+				font-size: 10px
+				font-weight: 400
+				line-height: 18px
+				margin-bottom: 5px	
+			.content-news_text-last
+				width: 84.67%	
+				height: 65px
+				color: #5c5c5c
+				font-size: 10px
+				font-weight: 400
+				line-height: 18px		
+		.content-news_stats
+			width: 100%
+			height: 30px
+			background-color: #f4f3f3
+			padding-left: 75.75%
+			box-sizing: border-box		
+			.content-news_stats-info
+				color: #076e9f
+				font-size: 10px
+				font-weight: 400
+				float: left
+				margin-right: 17%
+				margin-top: 11px
+				&:last-child
+					margin-right: 0
+			.content-news_stats-img
+				float: left	
+				margin-top: 7px
+				margin-right: 3%
+				&:last-child
+					margin-top: 8px
+	.content-news_item-last
+			margin-left: 0
+			margin-right: 0	
+			.content-news_item-wrap_last
+				margin-bottom: 3px			
+	.content-news_add
+		width: 98.4%
+		height: 80px
+		float: left
+		margin: 28px 0 0 1.72%
+		background-color: #f4f3f3
+		background-image: linear-gradient(to top, transparent 0%, transparent 100%)
+		.content-news_add-text
+			width: 9.18%
+			display: block
 			text-decoration: none
-			font-size: 10px
+			margin: 35px auto 0
+			text-shadow: 0 1px 0 rgba(255, 255, 255, 0.75)
+			color: #636363
+			font-size: 12px
 			font-weight: 400
-		.content-news_text
-			width: 68.52%
-			height: 46px
-			color: #5c5c5c
-			font-size: 10px
-			font-weight: 400
-			line-height: 18px
-			margin-bottom: 10px		
 
 
-		
+.content-currency
+	float: left
+	margin-left: 0.52%
