--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -179,7 +179,8 @@ body, h2,h3, p
 
 .content
 	position: relative
-
+	margin-bottom: 0
+	z-index: 1
 .content-header
 		color: #076e9f
 		font-family: $mainFont
@@ -192,7 +193,7 @@ body, h2,h3, p
 	width: 20.31%
 	height: 168px
 	float: left
-	margin-left: 0.52% 	
+	padding-left: 0.52%	
 	border-bottom: 1px dotted #d5d5d5
 	.content-author_info
 		width: 82.57%
@@ -210,6 +211,7 @@ body, h2,h3, p
 	float: left
 	background-color: #fff
 	margin-top: -10px
+	box-sizing: border-box
 	border-top: 2px solid #22aaec
 	border-left: 1px dotted #d5d5d5
 	border-bottom: 1px dotted #d5d5d5
@@ -271,7 +273,7 @@ body, h2,h3, p
 		height: 26px
 		background-color: #90d4f5	
 		float: right;
-		margin-right: -0.79%
+		margin-right: -0.66%
 		.content-welcome_stat-up
 			display: block
 			float: left
@@ -298,7 +300,7 @@ body, h2,h3, p
 	width: 20.31%
 	height: 219px
 	float: left
-	margin-left: 0.52% 	
+	padding-left: 0.52%	
 	margin-top: -19px
 	border-bottom: 1px dotted #d5d5d5
 	.content-header
@@ -338,6 +340,8 @@ body, h2,h3, p
 	width: 78.54%
 	height: 376px
 	float: left
+	z-index: 1
+	margin-right: 5px
 	background-color: #fff
 	border-left: 1px dotted #d5d5d5
 	border-bottom: 1px dotted #d5d5d5			
@@ -411,12 +415,21 @@ body, h2,h3, p
 			margin-left: 0
 			margin-right: 0	
 			.content-news_item-wrap_last
-				margin-bottom: 3px			
+				margin-bottom: 3px	
+	.content-news_item:last-child
+		background-color: white	
+		width: 98.4%	
+		height: 80px	
+		margin-top: 29px
+		&:before,
+		&:after
+			display: none			
 	.content-news_add
-		width: 98.4%
+		position: relative
+		width: 100%
 		height: 80px
 		float: left
-		margin: 28px 0 0 1.72%
+		box-sizing: border-box
 		background-color: #f4f3f3
 		background-image: linear-gradient(to top, transparent 0%, transparent 100%)
 		.content-news_add-text
@@ -430,6 +443,100 @@ body, h2,h3, p
 			font-weight: 400
 
 
+
 .content-currency
 	float: left
-	margin-left: 0.52%
+	padding-left: 0.52%
+	width: 20.31%
+	height: 176px
+	margin-top: -177px
+	border-bottom: 1px dotted #d5d5d5
+	.content-header
+		padding-top: 23px
+		margin-bottom: 12px
+	.content-currency_table
+		width: 87.63%
+		text-align: center
+		vertical-align: middle
+		.content-currency_table-h
+			width: 25%
+			height: 19px
+			background-color: #076e9f
+			color: white
+			font-size: 10px
+			font-weight: 400
+		.content-currency_table-d
+			width: 25%
+			height: 19px
+			background-color: rgba(144, 212, 245, 0.5)
+			color: #076e9f
+			font-size: 10px
+			font-weight: 400
+			line-height: 18px
+			padding: 0
+		.content-currency_table-up
+			display: inline-block
+			vertical-align: middle
+		.content-currency_table-blue
+			background-color: rgba(144, 212, 245, 0.7)	
+
+
+/*------End-Content--------*/
+
+/*-------Map--------*/			
+
+.map
+	.map-title
+		text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5)
+		color: #076e9f
+		font-family: $mainFont
+		font-size: 32px
+		font-weight: 400
+		margin: 18px 0 18px 3.62%
+
+
+/*------End-Map--------*/
+
+/*-------Footer--------*/	
+.footer-main
+	height: 44px
+	border-bottom: 1px dotted #d5d5d5
+	.footer-title		
+		width: 10%
+		height: 13px
+		font-family: $mainFont
+		font-size: 16px
+		font-weight: 400
+		text-transform: uppercase
+		color: #076e9f
+		margin-top: 10px
+		margin-left: 0.72%
+		float: left
+	.footer-nav
+		float: right
+		width: 27.08%
+		padding-left: 0
+		margin-top: 9px
+		.footer-nav_item
+			float: left
+			margin-right: 25px
+			list-style-type: none
+			.footer-nav_link
+				text-decoration: none
+				color: #707070
+				font-size: 10px
+				font-weight: 400
+				text-transform: uppercase
+			&:first-child
+				margin-right: 35px
+			&:last-child
+				margin-right: 0	
+.footer-copyright
+	width: 100%
+	height: 32px
+	text-align: center
+	line-height: 34px	
+	color: #787878
+	font-size: 10px
+	font-weight: 400
+	text-transform: uppercase			
