--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1,4 +1,4 @@
-
+// @import 'responsive'
 
 $mainFont : 'League Gothic'
 $anthrFont : 'League Gothic Condensed'
@@ -474,9 +474,10 @@ body, h2,h3, p
 			font-weight: 400
 			line-height: 18px
 			padding: 0
-		.content-currency_table-up
+		.content-currency_table-img_up,
+		.content-currency_table-img_down	
 			display: inline-block
-			vertical-align: middle
+			vertical-align: middle			
 		.content-currency_table-blue
 			background-color: rgba(144, 212, 245, 0.7)	
 
